lib/src/compiler/tests/testdata/errors/61.out
error[E120]: duplicate tag `tag1`
 --> line:1:18
  |
1 | rule test : tag1 tag1 { condition: true }
  |                  ^^^^ duplicate tag
  |